--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Uncomment .env from .gitignore to prevent it from being committed to version control
 TOKEN=secret-starter-mern
-MONGODB_URI=<your_mongodb_uri mongodb+srv://username:password@your-cluster.mongodb.net/database>
+MONGODB_URI=mongodb+srv://1zhonghaowei_db_user:PjlwEbRzubIw4ynn@cluster0.jc9bdqm.mongodb.net/?appName=Cluster0
