--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.6.1",
     "express": "^4.15.3",
+    "mongodb": "^6.20.0",
     "mongoose": "^5.4.18",
     "nodemon": "^1.11.0"
   }
